Created the Initial Layout of the website

--- a/index.html
+++ b/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/style.css">
-        <title>Main Title</title>
-    </head>
-    <body>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga, animi adipisci dicta perspiciatis commodi cum magni asperiores corporis et, excepturi, cupiditate quis? Ad voluptas quam dolorum hic dolor atque nesciunt fugiat aperiam nostrum eos, soluta provident, eum tenetur quasi nisi facere corporis qui iste vel consequatur. Libero iure fugit magnam error velit maxime rerum voluptatibus unde et, voluptatum praesentium quo optio, ea fugiat, maiores ipsa quaerat? Aliquam numquam illum eligendi repudiandae architecto dicta dignissimos? Praesentium eaque mollitia expedita dolorum laudantium, assumenda qui sapiente modi et, cumque accusantium? In, atque officiis optio incidunt laborum, doloribus blanditiis autem exercitationem libero quibusdam culpa.</p>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Project Atri</title>
+</head>
+<header>
+    <img src="images/logo.png" alt="logo" id="logo">
+    <h1 id="text_logo">Project Atri</h1>
+    <nav>
+        <ul>
+            <a href=""><li>Home</li></a>
+            <a href=""><li>About</li></a>
+            <a href=""><li>Gallery</li></a>
+            <a href=""><li>Contact</li></a>
+        </ul>
+    </nav>
+    <img src="images/search.png" alt="search icon" id="search">
+</header>
+<body>
+    <div>
+        <div id="right"></div>
+        <div id="left"></div>
+    </div>
+</body>
 </html>
